@@ -103,17 +103,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-	"item.mmorpg.alchemy.instant.misc.remove_spell": "Potion of Minor Spell Reset",
-	"item.mmorpg.alchemy.instant.misc.remove_talent": "Potion of Single Talent Reset",
-	"item.mmorpg.alchemy.instant.misc.reset_spells": "Potion of Spells Reset",
-	"item.mmorpg.alchemy.instant.misc.reset_stats": "Potion of Stat Reset",
-	"item.mmorpg.alchemy.instant.misc.reset_talents": "Potion of Talents Reset",
-
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"mmorpg.synergy.fireball_syn_1": "Fireball Explosion",
@@ -121,6 +110,7 @@
 	"mmorpg.synergy.frostball_syn_2": "Shiver Frostburn",
 	"mmorpg.synergy.heart_of_ice_syn_1": "Cold Healing Essence",
 	"mmorpg.synergy.heart_of_ice_syn_2": "Heart of Magic",
+	"mmorpg.synergy.holy_flower_syn_1": "Cleansing Formation",
 	"mmorpg.synergy.imbue_syn_1": "Imbue Instinct",
 	"mmorpg.synergy.lightning_totem_syn_1": "Totem Static",
 	"mmorpg.synergy.magma_flower_syn_1": "Magma Bloom",
@@ -128,6 +118,7 @@
 	"mmorpg.synergy.nature_balm_syn_1": "Balm of Thorns",
 	"mmorpg.synergy.nature_balm_syn_2": "Spread Balm",
 	"mmorpg.synergy.poisoned_weapons_syn_1": "Poison thorn seeker",
+	"mmorpg.synergy.purifying_fires_syn_1": "Fire of Judgement",
 	"mmorpg.synergy.recoil_shot_syn_1": "Recoil of the hunter",
 	"mmorpg.synergy.recoil_shot_syn_2": "Recoil Wounds",
 	"mmorpg.synergy.thorn_armor_syn_1": "Thorny Armor",
@@ -141,6 +132,17 @@
 	"mmorpg.synergy.whirlpool_syn_1": "Shiver pool",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
+
+	"item.mmorpg.alchemy.instant.misc.remove_spell": "Potion of Minor Spell Reset",
+	"item.mmorpg.alchemy.instant.misc.remove_talent": "Potion of Single Talent Reset",
+	"item.mmorpg.alchemy.instant.misc.reset_spells": "Potion of Spells Reset",
+	"item.mmorpg.alchemy.instant.misc.reset_stats": "Potion of Stat Reset",
+	"item.mmorpg.alchemy.instant.misc.reset_talents": "Potion of Talents Reset",
+
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
@@ -300,24 +302,6 @@
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 
-"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-	"item.mmorpg.lootbox.big_currency_lootbox_3": "§dEpic Big Currency Treasure Box",
-	"item.mmorpg.lootbox.big_currency_lootbox_4": "§6Legendary Big Currency Treasure Box",
-	"item.mmorpg.lootbox.big_gear_lootbox_3": "§dEpic Big Gear Treasure Box",
-	"item.mmorpg.lootbox.big_gear_lootbox_4": "§6Legendary Big Gear Treasure Box",
-	"item.mmorpg.lootbox.medium_currency_lootbox_3": "§dEpic Medium Currency Treasure Box",
-	"item.mmorpg.lootbox.medium_currency_lootbox_4": "§6Legendary Medium Currency Treasure Box",
-	"item.mmorpg.lootbox.medium_gear_lootbox_3": "§dEpic Medium Gear Treasure Box",
-	"item.mmorpg.lootbox.medium_gear_lootbox_4": "§6Legendary Medium Gear Treasure Box",
-	"item.mmorpg.lootbox.small_currency_lootbox_3": "§dEpic Small Currency Treasure Box",
-	"item.mmorpg.lootbox.small_currency_lootbox_4": "§6Legendary Small Currency Treasure Box",
-	"item.mmorpg.lootbox.small_gear_lootbox_3": "§dEpic Small Gear Treasure Box",
-	"item.mmorpg.lootbox.small_gear_lootbox_4": "§6Legendary Small Gear Treasure Box",
-
-"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-
 "_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 	"mmorpg.advancement.title.addaffix": "Add Affix",
@@ -336,6 +320,24 @@
 	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
 
 "_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+
+"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
+
+	"item.mmorpg.lootbox.big_currency_lootbox_3": "§dEpic Big Currency Treasure Box",
+	"item.mmorpg.lootbox.big_currency_lootbox_4": "§6Legendary Big Currency Treasure Box",
+	"item.mmorpg.lootbox.big_gear_lootbox_3": "§dEpic Big Gear Treasure Box",
+	"item.mmorpg.lootbox.big_gear_lootbox_4": "§6Legendary Big Gear Treasure Box",
+	"item.mmorpg.lootbox.medium_currency_lootbox_3": "§dEpic Medium Currency Treasure Box",
+	"item.mmorpg.lootbox.medium_currency_lootbox_4": "§6Legendary Medium Currency Treasure Box",
+	"item.mmorpg.lootbox.medium_gear_lootbox_3": "§dEpic Medium Gear Treasure Box",
+	"item.mmorpg.lootbox.medium_gear_lootbox_4": "§6Legendary Medium Gear Treasure Box",
+	"item.mmorpg.lootbox.small_currency_lootbox_3": "§dEpic Small Currency Treasure Box",
+	"item.mmorpg.lootbox.small_currency_lootbox_4": "§6Legendary Small Currency Treasure Box",
+	"item.mmorpg.lootbox.small_gear_lootbox_3": "§dEpic Small Gear Treasure Box",
+	"item.mmorpg.lootbox.small_gear_lootbox_4": "§6Legendary Small Gear Treasure Box",
+
+"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
@@ -883,11 +885,12 @@
 	"mmorpg.stat.plus_frostball_syn_1_synergy_lvl": "To Cold Essence creation Skill Level",
 	"mmorpg.stat.plus_frostball_syn_2_synergy_lvl": "To Shiver Frostburn Skill Level",
 	"mmorpg.stat.plus_gorgons_gaze_spell_lvl": "To Gorgon's Gaze Skill Level",
-	"mmorpg.stat.plus_healing_aura_spell_lvl": "To mmorpg.word.healingaura Skill Level",
+	"mmorpg.stat.plus_healing_aura_spell_lvl": "To Healing Aura Skill Level",
 	"mmorpg.stat.plus_heart_of_ice_spell_lvl": "To Heart of Ice Skill Level",
 	"mmorpg.stat.plus_heart_of_ice_syn_1_synergy_lvl": "To Cold Healing Essence Skill Level",
 	"mmorpg.stat.plus_heart_of_ice_syn_2_synergy_lvl": "To Heart of Magic Skill Level",
 	"mmorpg.stat.plus_holy_flower_spell_lvl": "To Holy Flower Skill Level",
+	"mmorpg.stat.plus_holy_flower_syn_1_synergy_lvl": "To Cleansing Formation Skill Level",
 	"mmorpg.stat.plus_hunter_instinct_effect_lvl": "To Hunter Instinct Skill Level",
 	"mmorpg.stat.plus_hunting_skill_lvls": "To Hunting Mastery Skill Levels",
 	"mmorpg.stat.plus_imbue_effect_lvl": "To Imbue Skill Level",
@@ -911,6 +914,7 @@
 	"mmorpg.stat.plus_poisoned_weapons_spell_lvl": "To Poisoned Weapons Skill Level",
 	"mmorpg.stat.plus_poisoned_weapons_syn_1_synergy_lvl": "To Poison thorn seeker Skill Level",
 	"mmorpg.stat.plus_purifying_fires_spell_lvl": "To Purifying Fires Skill Level",
+	"mmorpg.stat.plus_purifying_fires_syn_1_synergy_lvl": "To Fire of Judgement Skill Level",
 	"mmorpg.stat.plus_recoil_shot_spell_lvl": "To Recoil Shot Skill Level",
 	"mmorpg.stat.plus_recoil_shot_syn_1_synergy_lvl": "To Recoil of the hunter Skill Level",
 	"mmorpg.stat.plus_recoil_shot_syn_2_synergy_lvl": "To Recoil Wounds Skill Level",
@@ -1147,6 +1151,29 @@
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+	"effect.mmorpg.bleed": "Bleed",
+	"effect.mmorpg.burn": "Burn",
+	"effect.mmorpg.frost": "Frost",
+	"effect.mmorpg.frost_essence": "Cold Essence",
+	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
+	"effect.mmorpg.imbue": "Imbue",
+	"effect.mmorpg.judgement": "Judgement",
+	"effect.mmorpg.petrify": "Petrify",
+	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
+	"effect.mmorpg.self_regen": "Regenerate",
+	"effect.mmorpg.shiver": "Shiver",
+	"effect.mmorpg.static": "Static",
+	"effect.mmorpg.teleport_protection": "Teleport Guard",
+	"effect.mmorpg.thorn_armor": "Thorn Armor",
+	"effect.mmorpg.thorns": "Thorns",
+	"effect.mmorpg.thunder_essence": "Thunder Essence",
+	"effect.mmorpg.wounds": "Wounds",
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 	"item.mmorpg.bracelet.bracelet0": "§7Bracelet",
@@ -1271,29 +1298,6 @@
 	"item.mmorpg.torch.torch4": "§6Torch",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
-
-	"effect.mmorpg.bleed": "Bleed",
-	"effect.mmorpg.burn": "Burn",
-	"effect.mmorpg.frost": "Frost",
-	"effect.mmorpg.frost_essence": "Cold Essence",
-	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
-	"effect.mmorpg.imbue": "Imbue",
-	"effect.mmorpg.judgement": "Judgement",
-	"effect.mmorpg.petrify": "Petrify",
-	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
-	"effect.mmorpg.self_regen": "Regenerate",
-	"effect.mmorpg.shiver": "Shiver",
-	"effect.mmorpg.static": "Static",
-	"effect.mmorpg.teleport_protection": "Teleport Guard",
-	"effect.mmorpg.thorn_armor": "Thorn Armor",
-	"effect.mmorpg.thorns": "Thorns",
-	"effect.mmorpg.thunder_essence": "Thunder Essence",
-	"effect.mmorpg.wounds": "Wounds",
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: WORLD TYPES - NAMES",
